# med-cxx

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
.github/actions/configure-cmake/: action.yml
.github/workflows/: cmake.yml
src/: main.cpp
src/common/: ArgParser.cpp  ArgParser.hpp  Exception.cpp  Exception.hpp  Loss.cpp  Loss.hpp  Utils.cpp  Utils.hpp  Visualizer.cpp  Visualizer.hpp
src/data/: ImageLoader.cpp  ImageLoader.hpp
src/evaluation/: Benchmark.cpp  Benchmark.hpp
src/layers/: BaseLayer.cpp  BaseLayer.hpp  BasicBlock.cpp  BasicBlock.hpp  Bottleneck.cpp  Bottleneck.hpp  DenseBlock.cpp  DenseBlock.hpp  DenseLayer.cpp  DenseLayer.hpp  DoubleConv.cpp  DoubleConv.hpp  Down.cpp  Down.hpp  OutConv.cpp  OutConv.hpp  Transition.cpp  Transition.hpp  Up.cpp  Up.hpp
src/models/: BaseModel.cpp  BaseModel.hpp  DenseNet.cpp  DenseNet.hpp  ResNet.cpp  ResNet.hpp  UNet.cpp  UNet.hpp
src/runners/: main.cpp
src/trainer/: BaseTrainer.cpp  BaseTrainer.hpp  ClassificationTrainer.cpp  ClassificationTrainer.hpp  SegmentationTrainer.cpp  SegmentationTrainer.hpp
